--- a/Plugins/ZCash/Views/ZCash/GetStoreZcashLikePaymentMethod.cshtml
+++ b/Plugins/ZCash/Views/ZCash/GetStoreZcashLikePaymentMethod.cshtml
@@ -1,9 +1,13 @@
-@using BTCPayServer.Views.Stores
-@model BTCPayServer.Plugins.ZCash.Controllers.UIZcashLikeStoreController.ZcashLikePaymentMethodViewModel
+@using ZcashLikePaymentMethodViewModel = BTCPayServer.Plugins.ZCash.Controllers.UIZcashLikeStoreController.ZcashLikePaymentMethodViewModel
+@using ZcashLikeSettlementThresholdChoice = BTCPayServer.Plugins.ZCash.Controllers.UIZcashLikeStoreController.ZcashLikeSettlementThresholdChoice;
+@model ZcashLikePaymentMethodViewModel
 
 @{
-    ViewData.SetActivePage(StoreNavPages.OnchainSettings, StringLocalizer["{0} Settings", Model.CryptoCode], $"{Context.GetStoreData().Id}-{Model.CryptoCode}");
+    ViewData.SetActivePage(Model.CryptoCode, StringLocalizer["{0} Settings", Model.CryptoCode], Model.CryptoCode);
+    Layout = "_Layout";
 }
+
+<partial name="_StatusMessage" />
 
 <div class="row">
     <div class="col-md-8">
@@ -31,16 +35,11 @@
                   class="mt-4" enctype="multipart/form-data">
 
                 <div class="card my-2">
-                    <h3 class="card-title p-2" text-translate="true">Upload Wallet</h3>
+                    <h3 class="card-title p-2" text-translate="true">Create Wallet</h3>
                     <div class="form-group p-2">
-                        <label asp-for="WalletFile" class="form-label"></label>
-                        <input class="form-control" asp-for="WalletFile" required>
-                        <span asp-validation-for="WalletFile" class="text-danger"></span>
-                    </div>
-                    <div class="form-group p-2">
-                        <label asp-for="WalletKeysFile" class="form-label"></label>
-                        <input class="form-control" asp-for="WalletKeysFile" required>
-                        <span asp-validation-for="WalletKeysFile" class="text-danger"></span>
+                        <label asp-for="BirthHeight" class="form-label"></label>
+                        <input class="form-control" asp-for="BirthHeight">
+                        <span asp-validation-for="BirthHeight" class="text-danger"></span>
                     </div>
                     <div class="form-group p-2">
                         <label asp-for="WalletPassword" class="form-label"></label>
@@ -48,7 +47,7 @@
                         <span asp-validation-for="WalletPassword" class="text-danger"></span>
                     </div>
                     <div class="card-footer text-right">
-                        <button name="command" value="upload-wallet" class="btn btn-secondary" type="submit" text-translate="true">Upload</button>
+                        <button name="command" value="upload-wallet" class="btn btn-secondary" type="submit" text-translate="true">Create</button>
                     </div>
                 </div>
             </form>
@@ -78,18 +77,52 @@
                         <input type="hidden" asp-for="AccountIndex"/>
                     }
                 </div>
-                <div class="form-group">
+                @* <div class="form-group">
                     <div class="input-group my-3">
                         <input type="text" class="form-control" placeholder="@StringLocalizer["New account label"]" asp-for="NewAccountLabel">
                         <button name="command" value="add-account" class="input-group-text btn btn-secondary" type="submit" text-translate="true">Add account</button>
                     </div>
-                </div>
+                </div> *@
             }
 
             <div class="form-group">
                 <label asp-for="Enabled"></label>
                 <input asp-for="Enabled" type="checkbox" class="form-check"/>
                 <span asp-validation-for="Enabled" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="SettlementConfirmationThresholdChoice" class="form-label"></label>
+                <a href="https://docs.btcpayserver.org/FAQ/Stores/#consider-the-invoice-confirmed-when-the-payment-transaction" target="_blank" rel="noreferrer noopener" title="@StringLocalizer["More information..."]">
+                    <vc:icon symbol="info" />
+                </a>
+                <select
+                    asp-for="SettlementConfirmationThresholdChoice"
+                    asp-items="Html.GetEnumSelectList<ZcashLikeSettlementThresholdChoice>()"
+                    class="form-select w-auto"
+                    onchange="
+                        document.getElementById('unconfirmed-warning').hidden = this.value !== '@((int)ZcashLikeSettlementThresholdChoice.ZeroConfirmation)';
+                        document.getElementById('custom-confirmation-value').hidden = this.value !== '@((int)ZcashLikeSettlementThresholdChoice.Custom)';">
+                </select>
+                <span asp-validation-for="SettlementConfirmationThresholdChoice" class="text-danger"></span>
+                <p class="info-note my-3 text-warning" id="unconfirmed-warning" role="alert" hidden="@(Model.SettlementConfirmationThresholdChoice is not ZcashLikeSettlementThresholdChoice.ZeroConfirmation)">
+                    <vc:icon symbol="warning" />
+                    <span text-translate="true">Choosing to accept an unconfirmed invoice can lead to double-spending and is strongly discouraged.</span>
+                </p>
+            </div>
+
+            <div class="form-group" id="custom-confirmation-value" hidden="@(Model.SettlementConfirmationThresholdChoice is not ZcashLikeSettlementThresholdChoice.Custom)">
+                <label asp-for="CustomSettlementConfirmationThreshold" class="form-label"></label>
+                <input
+                    asp-for="CustomSettlementConfirmationThreshold"
+                    type="number"
+                    value="@(Model.CustomSettlementConfirmationThreshold)"
+                    class="form-control w-auto"
+                    min="0"
+                    max="100"
+                    pattern="\d+"
+                />
+                <span asp-validation-for="CustomSettlementConfirmationThreshold" class="text-danger"></span>
             </div>
 
             <div class="form-group">
